<resources>
    <string name="app_name">Profile Rizal</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="profile">PROFILE</string>

    <string name="setting">SETTING</string>
    <string name="logout">LOGOUT</string>
    <string name="contact">Contact</string>
    <string name="gallery">GALLERY</string>
    <string name="login">login</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
</resources>